make sure types dont go crazy if too much

--- a/src/shared/components/Types/Types.less
+++ b/src/shared/components/Types/Types.less
@@ -12,6 +12,12 @@
   display: inline-block;
   margin-right: 2em;
   padding: 0;
+  & > .ellipsis {
+    display: inline-block;
+    color: @text-color-secondary;
+    position: relative;
+    top: -4px;
+  }
 }
 
 .types-icon {
